--- a/todo.txt
+++ b/todo.txt
@@ -1,6 +1,3 @@
-Remove br.sm output?
-Specify output directory/use flags (as in N2HDECAY?)?
 Include CMAKE package/doxygen documentation in cmake?
-make tests? GNU License?
-
-Paramconversion?
+GNU License?
+What to do with slha input
